--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 universe
 /*.exe
-/*.dll
+/lua51.dll
 /packaging/temp_output.exe
 /packaging/win32-runner/radish-runner.exp
 /packaging/win32-runner/radish-runner.lib
